<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <Button
            android:text="@string/button_raise_volume_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/button_raise_volume" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/text_status"/>
    <Button
            android:text="@string/button_prev_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/button_prev"
            app:layout_constraintEnd_toStartOf="@+id/button_raise_volume"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/button_raise_volume"/>
    <Button
            android:text="@string/button_play_label"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:id="@+id/button_play"
            app:layout_constraintTop_toBottomOf="@+id/button_raise_volume"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
    <Button
            android:text="@string/button_next_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_next"
            app:layout_constraintTop_toTopOf="@+id/button_lower_volume"
            app:layout_constraintEnd_toStartOf="@+id/button_lower_volume" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_lower_volume_label"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:id="@+id/button_lower_volume" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/button_play"
    />
    <Button
            android:text="@string/button_up_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/button_up" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/button_lower_volume"/>
    <Button
            android:text="@string/button_left_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/button_left"
            app:layout_constraintTop_toTopOf="@+id/button_ok" app:layout_constraintEnd_toStartOf="@+id/button_ok"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_ok_label"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:id="@+id/button_ok"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_up" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/button_right_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_right"
            app:layout_constraintTop_toTopOf="@+id/button_ok" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/button_ok"/>
    <Button
            android:text="@string/button_down_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/button_down" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_ok"/>
    <Switch
            android:text="@string/enable_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_control" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_port" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:checked="false"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edit_port"
            android:digits="0123456789"  android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/edit_ip_address"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:enabled="false" android:hint="@string/port_hint"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/edit_ip_address"
            android:digits="0123456789." android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/edit_port"
            android:layout_marginEnd="21dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:enabled="false" android:hint="@string/ip_address_hint"/>
    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:id="@+id/text_status" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_ip_address" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switch_control"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/button_raise_master_volume_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_raise_master_volume"
            app:layout_constraintStart_toEndOf="@+id/button_raise_volume"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/button_raise_volume"/>
    <Button
            android:text="@string/button_space_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_space"
            app:layout_constraintTop_toTopOf="@+id/button_play"
            app:layout_constraintStart_toEndOf="@+id/button_play" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/button_lower_master_volume_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_lower_master_volume"
            app:layout_constraintTop_toTopOf="@+id/button_lower_volume"
            app:layout_constraintStart_toEndOf="@+id/button_lower_volume" android:layout_marginStart="16dp"
    />
    <Button
            android:text="@string/button_tab_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_tab"
            app:layout_constraintTop_toTopOf="@+id/button_play"
            app:layout_constraintEnd_toStartOf="@+id/button_play" android:layout_marginEnd="16dp"/>

</android.support.constraint.ConstraintLayout>